# RS-Proto

./: Altered_SHIELD_Model.ipynb  Dockerfile  README.md  Reddit_Base_SHIELD_Model.ipynb  app.py  check_base_config.py  check_config.py  check_hf_files.py  hatespeech_model.py  pyproject.toml  requirements.txt  run_app.ps1  test_base_model.py  test_imports.py  test_model_load.py
notebooks/: hatespeech_model.py  paramsearchv2cox1.ipynb  proposed-new-model.ipynb  thesis-proposed-model-vo3.ipynb  thesis-proposed-model-vo4.ipynb
src/: app.py  hatespeech_model.py
