[project]
name = "proto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filelock>=3.12.0",
    "huggingface-hub>=0.34.0,<1.0",
    "nltk>=3.9.2",
    "numpy>=1.24.0",
    "packaging>=23.0",
    "pandas>=2.3.3",
    "plotly>=5.14.0",
    "regex>=2023.5.0",
    "requests>=2.31.0",
    "safetensors>=0.3.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.1",
    "tokenizers>=0.13.0",
    "torch>=2.9.1",
    "tqdm>=4.65.0",
    "transformers>=4.30.0",
]
